syntax = "proto2";
  message WebrtcStats{
    optional local_obj local=1;
    optional remote_obj remote=2;
    optional int64 timestamp=3;
    optional string appkey=4;
    optional int64 cid=5;
    optional int64 uid=6;
    optional string browser=7;
    optional string platform=8;
    optional string sdkVersion=9;
    message local_obj{
      repeated audio_ssrc_obj audio_ssrc=1;
      repeated audioSlave_ssrc_obj audioSlave_ssrc=2;
      repeated video_ssrc_obj video_ssrc=3;
      repeated screen_ssrc_obj screen_ssrc=4;
      repeated bwe_obj bwe=5;

      message audio_ssrc_obj{
        optional string audioInputLevel=1;
        optional double totalAudioEnergy=2;
        optional string mediaType=3;
        optional string transportId=4;
        optional int64 packetsLost=5;
        optional string googRtt=6;
        optional string googEchoCancellationReturnLoss=7;
        optional string googCodecName=8;
        optional int64 ssrc=9;
        optional string googJitterReceived=10;
        optional string googEchoCancellationReturnLossEnhancement=11;
        optional int64 packetsSent=12;
        optional int64 bytesSent=13;
        optional double totalSamplesDuration=14;
        optional string googTrackId=15;
        optional string id=16;
        optional string type=17;
        optional int64 timestamp=18;
        optional string streamType=19;
        optional int64 uid=20;
        optional string dataId=21;
        optional int64 bitsSentPerSecond=22;
        optional int64 packetsSentPerSecond=23;
        optional int64 packetsLostPerSecond=24;
        optional int64 sendPacketLoss=25;
        optional int64 packetsLostRate=26;
        optional string kind=27;
        optional string trackId=28;
        optional string codecId=29;
        optional string mediaSourceId=30;
        optional string remoteId=31;
        optional string mid=32;
        optional int64 retransmittedPacketsSent=33;
        optional int64 retransmittedBytesSent=34;
        optional int64 targetBitrate=35;
        optional int64 nackCount=36;
        optional int64 active=37;
        optional double jitter=38;
        optional string localId=39;
        optional double roundTripTime=40;
        optional int64 fractionLost=41;
        optional double totalRoundTripTime=42;
        optional int64 roundTripTimeMeasurements=43;
        optional int64 headerBytesSent=44;
      }

      message audioSlave_ssrc_obj{
        optional string audioInputLevel=1;
        optional double totalAudioEnergy=2;
        optional string mediaType=3;
        optional string transportId=4;
        optional int64 packetsLost=5;
        optional string googRtt=6;
        optional int64 roundTripTimeMeasurements=7;
        optional string googCodecName=8;
        optional int64 ssrc=9;
        optional string googJitterReceived=10;
        optional int64 headerBytesSent=11;
        optional int64 packetsSent=12;
        optional int64 bytesSent=13;
        optional double totalSamplesDuration=14;
        optional string googTrackId=15;
        optional string id=16;
        optional string type=17;
        optional int64 timestamp=18;
        optional string streamType=19;
        optional int64 uid=20;
        optional string dataId=21;
        optional int64 bitsSentPerSecond=22;
        optional int64 packetsSentPerSecond=23;
        optional int64 packetsLostPerSecond=24;
        optional int64 sendPacketLoss=25;
        optional int64 packetsLostRate=26;
        optional string kind=27;
        optional string trackId=28;
        optional string codecId=29;
        optional string mediaSourceId=30;
        optional string remoteId=31;
        optional string mid=32;
        optional int64 retransmittedPacketsSent=33;
        optional int64 retransmittedBytesSent=34;
        optional int64 targetBitrate=35;
        optional int64 nackCount=36;
        optional int64 active=37;
        optional double jitter=38;
        optional string localId=39;
        optional double roundTripTime=40;
        optional int64 fractionLost=41;
        optional double totalRoundTripTime=42;
      }

      message video_ssrc_obj{
        optional string googContentType=1;
        optional string googFrameWidthInput=2;
        optional int64 packetsLost=3;
        optional string googRtt=4;
        optional int64 googHasEnteredLowResolution=5;
        optional string googEncodeUsagePercent=6;
        optional int64 googCpuLimitedResolution=7;
        optional int64 hugeFramesSent=8;
        optional string googNacksReceived=9;
        optional int64 googBandwidthLimitedResolution=10;
        optional string googFrameHeightInput=11;
        optional string googPlisReceived=12;
        optional string googFrameRateInput=13;
        optional string googAvgEncodeMs=14;
        optional string googTrackId=15;
        optional string codecImplementationName=16;
        optional string transportId=17;
        optional int64 framesEncoded=18;
        optional string mediaType=19;
        optional string googFrameHeightSent=20;
        optional string googFrameRateSent=21;
        optional string googCodecName=22;
        optional int64 qpSum=23;
        optional string googAdaptationChanges=24;
        optional int64 ssrc=25;
        optional string googFirsReceived=26;
        optional string googFrameWidthSent=27;
        optional int64 packetsSent=28;
        optional int64 bytesSent=29;
        optional string id=30;
        optional string type=31;
        optional int64 timestamp=32;
        optional string streamType=33;
        optional int64 dataId=34;
        optional int64 freezeTime=35;
        optional int64 totalFreezeTime=36;
        optional int64 bitsSentPerSecond=37;
        optional int64 packetsSentPerSecond=38;
        optional int64 packetsLostPerSecond=39;
        optional int64 sendPacketLoss=40;
        optional int64 packetsLostRate=41;
        optional int64 framesEncodedPerSecond=42;
        optional double qpPercentage=43;
        optional string kind=44;
        optional string trackId=45;
        optional string codecId=46;
        optional string mediaSourceId=47;
        optional string remoteId=48;
        optional string mid=49;
        optional int64 retransmittedPacketsSent=50;
        optional int64 headerBytesSent=51;
        optional int64 retransmittedBytesSent=52;
        optional int64 keyFramesEncoded=53;
        optional double totalEncodeTime=54;
        optional int64 totalEncodedBytesTarget=55;
        optional int64 frameWidth=56;
        optional int64 frameHeight=57;
        optional int64 framesPerSecond=58;
        optional int64 framesSent=59;
        optional double totalPacketSendDelay=60;
        optional string qualityLimitationReason=61;
        optional int64 qualityLimitationResolutionChanges=62;
        optional string encoderImplementation=63;
        optional int64 firCount=64;
        optional int64 pliCount=65;
        optional int64 nackCount=66;
        optional int64 active=67;
        optional double jitter=68;
        optional string localId=69;
        optional double roundTripTime=70;
        optional int64 fractionLost=71;
        optional double totalRoundTripTime=72;
        optional int64 roundTripTimeMeasurements=73;
        optional int64 frameRateSent=74;
        optional int64 packetsReceived=75;
        optional int64 uid=76;
       // repeated quality_limitation_durations_obj qualityLimitationDurations=77;
       // message quality_limitation_durations_obj {
       //    optional double other=1;
       //    optional double cpu=2;
       //    optional double bandwidth=3;
       //    optional double none=4;
       // }
      }

      message screen_ssrc_obj{
        optional string googContentType=1;
        optional string googFrameWidthInput=2;
        optional int64 packetsLost=3;
        optional string googRtt=4;
        optional int64 googHasEnteredLowResolution=5;
        optional string googEncodeUsagePercent=6;
        optional int64 googCpuLimitedResolution=7;
        optional int64 hugeFramesSent=8;
        optional string googNacksReceived=9;
        optional int64 googBandwidthLimitedResolution=10;
        optional string googFrameHeightInput=11;
        optional string googPlisReceived=12;
        optional string googFrameRateInput=13;
        optional string googAvgEncodeMs=14;
        optional string googTrackId=15;
        optional string codecImplementationName=16;
        optional string transportId=17;
        optional int64 framesEncoded=18;
        optional string mediaType=19;
        optional string googFrameHeightSent=20;
        optional string googFrameRateSent=21;
        optional string googCodecName=22;
        optional int64 qpSum=23;
        optional string googAdaptationChanges=24;
        optional int64 ssrc=25;
        optional string googFirsReceived=26;
        optional string googFrameWidthSent=27;
        optional int64 packetsSent=28;
        optional int64 bytesSent=29;
        optional string id=30;
        optional string type=31;
        optional int64 timestamp=32;
        optional string streamType=33;
        optional int64 dataId=34;
        optional int64 freezeTime=35;
        optional int64 totalFreezeTime=36;
        optional int64 bitsSentPerSecond=37;
        optional int64 packetsSentPerSecond=38;
        optional int64 packetsLostPerSecond=39;
        optional int64 sendPacketLoss=40;
        optional int64 packetsLostRate=41;
        optional int64 framesEncodedPerSecond=42;
        optional double qpPercentage=43;
        optional string kind=44;
        optional string trackId=45;
        optional string codecId=46;
        optional string mediaSourceId=47;
        optional string remoteId=48;
        optional string mid=49;
        optional int64 retransmittedPacketsSent=50;
        optional int64 headerBytesSent=51;
        optional int64 retransmittedBytesSent=52;
        optional int64 keyFramesEncoded=53;
        optional double totalEncodeTime=54;
        optional int64 totalEncodedBytesTarget=55;
        optional int64 frameWidth=56;
        optional int64 frameHeight=57;
        optional int64 framesPerSecond=58;
        optional int64 framesSent=59;
        optional double totalPacketSendDelay=60;
        optional string qualityLimitationReason=61;
        optional int64 qualityLimitationResolutionChanges=62;
        optional string encoderImplementation=63;
        optional int64 firCount=64;
        optional int64 pliCount=65;
        optional int64 nackCount=66;
        optional int64 active=67;
        optional double jitter=68;
        optional string localId=69;
        optional double roundTripTime=70;
        optional int64 fractionLost=71;
        optional double totalRoundTripTime=72;
        optional int64 roundTripTimeMeasurements=73;
        optional int64 frameRateSent=74;
        optional int64 packetsReceived=75;
        optional string contentType=76;
        optional int64 uid=77;
      //  repeated quality_limitation_durations_obj qualityLimitationDurations=78;
      //  message quality_limitation_durations_obj {
      //     optional double other=1;
      //     optional double cpu=2;
      //     optional double bandwidth=3;
      //     optional double none=4;
      //  }
      }

      message bwe_obj{
          optional string googActualEncBitrate=1;
          optional string googAvailableSendBandwidth=2;
          optional string googRetransmitBitrate=3;
          optional string googAvailableReceiveBandwidth=4;
          optional string googTargetEncBitrate=5;
          optional string googBucketDelay=6;
          optional string googTransmitBitrate=7;
          optional string id=8;
          optional string type=9;
          optional int64 timestamp=10;
          optional string dataId=11;
      }
    }

    message remote_obj{
      repeated audio_ssrc_obj audio_ssrc=1;
      repeated audioSlave_ssrc_obj audioSlave_ssrc=2;
      repeated video_ssrc_obj video_ssrc=3;
      repeated screen_ssrc_obj screen_ssrc=4;
      repeated bwe_obj bwe=5;

      message audio_ssrc_obj{
        optional string googDecodingCTN=1;
        optional int64 packetsLost=2;
        optional string googSecondaryDecodedRate=3;
        optional string googDecodingPLC=4;
        optional int64 packetsReceived=5;
        optional string googDecodingCNG=6;
        optional string googPreferredJitterBufferMs=7;
        optional string googSpeechExpandRate=8;
        optional double totalSamplesDuration=9;
        optional string googTrackId=10;
        optional double totalAudioEnergy=11;
        optional string transportId=12;
        optional string mediaType=13;
        optional string googDecodingPLCCNG=14;
        optional string googCodecName=15;
        optional string googDecodingNormal=16;
        optional string googSecondaryDiscardedRate=17;
        optional int64 ssrc=18;
        optional string audioOutputLevel=19;
        optional int64 bytesReceived=20;
        optional string googAccelerateRate=21;
        optional string googCurrentDelayMs=22;
        optional string googDecodingCTSG=23;
        optional string googExpandRate=24;
        optional string googJitterReceived=25;
        optional string googPreemptiveExpandRate=26;
        optional string googJitterBufferMs=27;
        optional string googDecodingMuted=28;
        optional string id=29;
        optional string type=30;
        optional int64 timestamp=31;
        optional string streamType=32;
        optional string uid=33;
        optional string dataId=34;
        optional int64 freezeTime=35;
        optional int64 totalFreezeTime=36;
        optional int64 bitsReceivedPerSecond=37;
        optional int64 packetsReceivedPerSecond=38;
        optional int64 packetsLostPerSecond=39;
        optional int64 recvPacketLoss=40;
        optional double packetsLostRate=41;
        optional string kind=42;
        optional string trackId=43;
        optional string codecId=44;
        optional double jitter=45;
        optional int64 packetsDiscarded=46;
        optional string trackIdentifier=47;
        optional string mid=48;
        optional string remoteId=49;
        optional int64 fecPacketsReceived=50;
        optional int64 fecPacketsDiscarded=51;
        optional int64 headerBytesReceived=52;
        optional int64 lastPacketReceivedTimestamp=53;
        optional int64 jitterBufferDelay=54;
        optional double jitterBufferTargetDelay=55;
        optional double jitterBufferMinimumDelay=56;
        optional int64 jitterBufferEmittedCount=57;
        optional int64 totalSamplesReceived=58;
        optional int64 concealedSamples=59;
        optional int64 silentConcealedSamples=60;
        optional int64 concealmentEvents=61;
        optional int64 insertedSamplesForDeceleration=62;
        optional int64 removedSamplesForAcceleration=63;
        optional double audioLevel=64;
        optional int64 nackCount=65;
        optional int64 packetsSent=66;
        optional int64 bytesSent=67;
        optional string localId=68;
        optional int64 remoteTimestamp=69;
        optional int64 reportsSent=70;
        optional int64 roundTripTimeMeasurements=71;
        optional int64 totalRoundTripTime=72;
        optional int64 estimatedPlayoutTimestamp=73;
        optional int64 googDecodingNormalPerSecond=74;
      }

      message audioSlave_ssrc_obj{
        optional string googDecodingCTN=1;
        optional int64 packetsLost=2;
        optional string googSecondaryDecodedRate=3;
        optional string googDecodingPLC=4;
        optional int64 packetsReceived=5;
        optional string googDecodingCNG=6;
        optional string googPreferredJitterBufferMs=7;
        optional string googSpeechExpandRate=8;
        optional double totalSamplesDuration=9;
        optional string googTrackId=10;
        optional double totalAudioEnergy=11;
        optional string transportId=12;
        optional string mediaType=13;
        optional string googDecodingPLCCNG=14;
        optional string googCodecName=15;
        optional string googDecodingNormal=16;
        optional string googSecondaryDiscardedRate=17;
        optional int64 ssrc=18;
        optional string audioOutputLevel=19;
        optional int64 bytesReceived=20;
        optional string googAccelerateRate=21;
        optional string googCurrentDelayMs=22;
        optional string googDecodingCTSG=23;
        optional string googExpandRate=24;
        optional string googJitterReceived=25;
        optional string googPreemptiveExpandRate=26;
        optional string googJitterBufferMs=27;
        optional string googDecodingMuted=28;
        optional string id=29;
        optional string type=30;
        optional int64 timestamp=31;
        optional string streamType=32;
        optional string uid=33;
        optional string dataId=34;
        optional int64 freezeTime=35;
        optional int64 totalFreezeTime=36;
        optional int64 bitsReceivedPerSecond=37;
        optional int64 packetsReceivedPerSecond=38;
        optional int64 packetsLostPerSecond=39;
        optional int64 recvPacketLoss=40;
        optional double packetsLostRate=41;
        optional string kind=42;
        optional string trackId=43;
        optional string codecId=44;
        optional double jitter=45;
        optional int64 packetsDiscarded=46;
        optional string trackIdentifier=47;
        optional string mid=48;
        optional string remoteId=49;
        optional int64 fecPacketsReceived=50;
        optional int64 fecPacketsDiscarded=51;
        optional int64 headerBytesReceived=52;
        optional int64 lastPacketReceivedTimestamp=53;
        optional int64 jitterBufferDelay=54;
        optional double jitterBufferTargetDelay=55;
        optional double jitterBufferMinimumDelay=56;
        optional int64 jitterBufferEmittedCount=57;
        optional int64 totalSamplesReceived=58;
        optional int64 concealedSamples=59;
        optional int64 silentConcealedSamples=60;
        optional int64 concealmentEvents=61;
        optional int64 insertedSamplesForDeceleration=62;
        optional int64 removedSamplesForAcceleration=63;
        optional double audioLevel=64;
        optional int64 nackCount=65;
        optional int64 packetsSent=66;
        optional int64 bytesSent=67;
        optional string localId=68;
        optional int64 remoteTimestamp=69;
        optional int64 reportsSent=70;
        optional int64 roundTripTimeMeasurements=71;
        optional int64 totalRoundTripTime=72;
        optional int64 googDecodingNormalPerSecond=73;
      }

      message video_ssrc_obj{
        optional string googContentType=1;
        optional string googCaptureStartNtpTimeMs=2;
        optional string googTargetDelayMs=3;
        optional int64 packetsLost=4;
        optional string googDecodeMs=5;
        optional string googFrameHeightReceived=6;
        optional int64 packetsReceived=7;
        optional string googMaxDecodeMs=8;
        optional string googTrackId=9;
        optional string googFrameWidthReceived=10;
        optional string codecImplementationName=11;
        optional string transportId=12;
        optional string mediaType=13;
        optional string googInterframeDelayMax=14;
        optional string googCodecName=15;
        optional string googFrameRateReceived=16;
        optional string googMinPlayoutDelayMs=17;
        optional int64 framesDecoded=18;
        optional string googNacksSent=19;
        optional int64 ssrc=20;
        optional int64 bytesReceived=21;
        optional string googFirstFrameReceivedToDecodedMs=22;
        optional string googCurrentDelayMs=23;
        optional string googRenderDelayMs=24;
        optional string googFirsSent=25;
        optional string googFrameRateDecoded=26;
        optional string googFrameRateOutput=27;
        optional string googJitterBufferMs=28;
        optional string googPlisSent=29;
        optional string id=30;
        optional string type=31;
        optional int64 timestamp=32;
        optional string streamType=33;
        optional string uid=34;
        optional string dataId=35;
        optional int64 freezeTime=36;
        optional int64 totalFreezeTime=37;
        optional int64 bitsReceivedPerSecond=38;
        optional double packetsReceivedPerSecond=39;
        optional double packetsLostPerSecond=40;
        optional int64 recvPacketLoss=41;
        optional double framesDecodedPerSecond=42;
        optional string kind=43;
        optional string trackId=44;
        optional string codecId=45;
        optional double jitter=46;
        optional string trackIdentifier=47;
        optional string mid=48;
        optional int64 headerBytesReceived=49;
        optional int64 lastPacketReceivedTimestamp=50;
        optional double jitterBufferDelay=51;
        optional int64 jitterBufferEmittedCount=52;
        optional int64 framesReceived=53;
        optional int64 frameWidth=54;
        optional int64 frameHeight=55;
        optional int64 framesPerSecond=56;
        optional int64 keyFramesDecoded=57;
        optional int64 framesDropped=58;
        optional double totalDecodeTime=59;
        optional double totalProcessingDelay=60;
        optional double totalInterFrameDelay=61;
        optional double totalSquaredInterFrameDelay=62;
        optional int64 estimatedPlayoutTimestamp=63;
        optional string decoderImplementation=64;
        optional int64 firCount=65;
        optional int64 pliCount=66;
        optional int64 nackCount=67;
        optional int64 discardedPackets=68;
        optional int64 packetsDiscarded=69;
        optional string remoteId=70;
        optional int64 bytesSent=71;
        optional int64 packetsSent=72;
        optional string localId=73;
        optional int64 remoteTimestamp=74;
        optional double packetsLostRate=75;
        optional double frameRateReceived=76;
      }

      message screen_ssrc_obj{
        optional string googContentType=1;
        optional string googCaptureStartNtpTimeMs=2;
        optional string googTargetDelayMs=3;
        optional int64 packetsLost=4;
        optional string googDecodeMs=5;
        optional string googFrameHeightReceived=6;
        optional int64 packetsReceived=7;
        optional string googMaxDecodeMs=8;
        optional string googTrackId=9;
        optional string googFrameWidthReceived=10;
        optional string codecImplementationName=11;
        optional string transportId=12;
        optional string mediaType=13;
        optional string googInterframeDelayMax=14;
        optional string googCodecName=15;
        optional string googFrameRateReceived=16;
        optional string googMinPlayoutDelayMs=17;
        optional int64 framesDecoded=18;
        optional string googNacksSent=19;
        optional int64 ssrc=20;
        optional int64 bytesReceived=21;
        optional string googFirstFrameReceivedToDecodedMs=22;
        optional string googCurrentDelayMs=23;
        optional string googRenderDelayMs=24;
        optional string googFirsSent=25;
        optional string googFrameRateDecoded=26;
        optional string googFrameRateOutput=27;
        optional string googJitterBufferMs=28;
        optional string googPlisSent=29;
        optional string id=30;
        optional string type=31;
        optional int64 timestamp=32;
        optional string streamType=33;
        optional string uid=34;
        optional string dataId=35;
        optional int64 freezeTime=36;
        optional int64 totalFreezeTime=37;
        optional int64 bitsReceivedPerSecond=38;
        optional double packetsReceivedPerSecond=39;
        optional double packetsLostPerSecond=40;
        optional int64 recvPacketLoss=41;
        optional double framesDecodedPerSecond=42;
        optional string kind=43;
        optional string trackId=44;
        optional string codecId=45;
        optional double jitter=46;
        optional string trackIdentifier=47;
        optional string mid=48;
        optional int64 headerBytesReceived=49;
        optional int64 lastPacketReceivedTimestamp=50;
        optional double jitterBufferDelay=51;
        optional int64 jitterBufferEmittedCount=52;
        optional int64 framesReceived=53;
        optional int64 frameWidth=54;
        optional int64 frameHeight=55;
        optional int64 framesPerSecond=56;
        optional int64 keyFramesDecoded=57;
        optional int64 framesDropped=58;
        optional double totalDecodeTime=59;
        optional double totalProcessingDelay=60;
        optional double totalInterFrameDelay=61;
        optional double totalSquaredInterFrameDelay=62;
        optional int64 estimatedPlayoutTimestamp=63;
        optional string decoderImplementation=64;
        optional int64 firCount=65;
        optional int64 pliCount=66;
        optional int64 nackCount=67;
        optional int64 discardedPackets=68;
        optional int64 packetsDiscarded=69;
        optional string remoteId=70;
        optional int64 bytesSent=71;
        optional int64 packetsSent=72;
        optional string localId=73;
        optional int64 remoteTimestamp=74;
        optional double packetsLostRate=75;
        optional double frameRateReceived=76;
      }

      message bwe_obj{
        optional string googActualEncBitrate=1;
        optional string googAvailableSendBandwidth=2;
        optional string googRetransmitBitrate=3;
        optional string googAvailableReceiveBandwidth=4;
        optional string googTargetEncBitrate=5;
        optional string googBucketDelay=6;
        optional string googTransmitBitrate=7;
        optional string id=8;
        optional string type=9;
        optional int64 timestamp=10;
        optional string dataId=11;
      }
    }
}
